Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7927

Deadlock between ll_setattr() and ll_file_write()->ll_fsync()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      commit 85bd36cc69563d7a79e3ed34f8fadb4ed1a72b7c
      Author: Henri Doreau <henri.doreau@cea.fr>
      Date:   Fri Apr 18 16:17:01 2014 +0200
      
          LU-4840 lfs: Use file lease to implement migration
      

      moves lli_trunc_sem into vvp layer.
      It violates lli_trunc_sem/i_mutex locking order.

      So i_mutex sholud be taken after lli_trunc_sem now.

            wc-triage WC Triage
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: