LU-7927 llite: Deadlock between ll_setattr and write/ll_fsync

commit 85bd36cc69563d7a79e3ed34f8fadb4ed1a72b7c
Author: Henri Doreau <henri.doreau@cea.fr>
Date: Fri Apr 18 16:17:01 2014 +0200

LU-4840 lfs: Use file lease to implement migration

moves lli_trunc_sem into vvp layer.
It violates lli_trunc_sem/i_mutex locking order.

So i_mutex should be taken after lli_trunc_sem now.

Change-Id: I2ecd52b7ae6eca74c6db7d94b1de1333560bc45d
Seagate-bug-id: MRP-3372
Signed-off-by: Andriy Skulysh <andriy.skulysh@seagate.com>